{
    "name": "GameControls",
    "maps": [
        {
            "name": "InGame",
            "id": "dc5045d6-02cb-493d-a3d9-1146f47e3b5c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "2c5ff186-0653-4506-9d1d-391bfb007846",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FightVirus",
                    "type": "PassThrough",
                    "id": "ae4c2aef-b951-4477-817e-ea84c66dc371",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "201cabac-5608-4934-b03e-f9cd6c83c075",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9cfd0389-0049-43c7-8a12-143c764b4c9e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "61d414cf-f6e6-4db1-8209-6ca56fdbd4ac",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1a72d6ec-de4c-4ddd-98f3-c71da8bc0375",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "600d0363-fdc3-4d84-b5ab-ddb9b3d45568",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e743bed-1f8c-4f85-9ae3-f49c47b53a7d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightVirus",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}